# cuda_neural_net

./: .gitignore  README.md  tags
Code/1_non_matrix_serial_network/: layer.cpp  layer.hpp
Code/1_serial_network/: layer.cpp  matrix.cpp  matrix.hpp  run.batch  serial_test2.cpp
Code/2_cuda_network/: Makefile  large_input_test  large_input_test.batch  large_input_test.cu  layer.cu  layer.hpp  layerTest4.cu  matrix.cu  matrix.hpp  wholesale_cust_test  wholesale_cust_test.batch  wholesale_cust_test.cu
Code/2_serial_matrix_network/: .layer.cpp.swo  layer.cpp  layer.hpp  makefile  matrix.cpp  matrix.hpp  network.hpp  networkTest.cpp  run.batch  serial1  serial_test.cpp  serial_test2.cpp  test_serial1  test_serial2
Code/3_cuda_matrix_network/: LayerTest  cuda_kernels.cu  cuda_scratch.cu  layer.cu  layerTest3.cu  layerTest4.cu  run2.batch  try.cu
Code/4_distributed_cuda_network/: DistTest  layer.cu  layerTest3.cu  layerTest4.cu  matrix.cu  run2.batch
Code/cuda-nn/: check  layer.cpp  layer.hpp  networkcheck.cpp  nn.cpp  nn.hpp  relu_layer.hpp  sigmoid_layer.cpp  sigmoid_layer.hpp  test
Code/cuda_matrix_network/: LayerTest  laterTest  matrix.hpp  matrixTest.cpp
Code/data/: data_loader.cpp  data_loader.hpp  data_n1000_m50_mu1.csv  (+6 more)
Code/nn/: CMakeLists.txt  a.out  layer.cpp  layer.hpp  main.cpp  main2.cpp  main3.cpp  networkTraining.cpp  nn.cpp  nn.hpp  nn.hpp.gch  relu_layer.cpp  sigmoid_layer.cpp  softmax_layer.cpp  test
Code/nn/utils/: dataset.cpp  dataset.hpp
Proposal/: WeeklyMeanings.txt  bibliography.bib
Report/: Proposal.tex  acl2019.bib  tto2019.tex
(+64 files in other folders)
